mc/kustomize/base/map-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-map
spec:
  selector:
    app: mc-map
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
