mc/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mc-server
spec:
  selector:
    app: mc
  ports:
  - port: 25565
    targetPort: 25565
    nodePort: 30006
    protocol: TCP
    name: mc-server
  externalTrafficPolicy: Local
  type: NodePort 
---
apiVersion: v1
kind: Service
metadata:
  name: mc-voice
spec:
  selector:
    app: mc
  ports:
  - port: 24454
    targetPort: 24454
    nodePort: 30007
    protocol: UDP
    name: mc-voice
  externalTrafficPolicy: Local
  type: NodePort
