mc/kustomize/base/map-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mc-map
  annotations: 
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
    - host: mc.noahtutt.dev
      http: 
        paths:
        - backend:
            service: 
              name: mc-map 
              port:
                name: http
          path: / 
          pathType: Prefix
  tls:
    - hosts:
      - mc.noahtutt.dev
      secretName: tls-pihole-dashboard
